--- a/dermModelBackend/dermModel/src/main/resources/application.properties
+++ b/dermModelBackend/dermModel/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=dermModel
 
 spring.datasource.url=jdbc:mysql://localhost:3306/MainConnection?createDatabaseIfNotExist=true
-#pentru a crea schema automat
 
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=admin
+
+#server port
+server.port=8081
 
 spring.jpa.hibernate.ddl-auto=update
 #spring.sql.init.mode=always
